--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,7 @@ body{
   
   background-color: #424242;
   height: 30px;
+  width: 70px;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
