--- a/styles/style.css
+++ b/styles/style.css
@@ -37,3 +37,25 @@ body{
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
 }
+
+.homeHeader nav ul{
+  list-style: none;
+  margin: 0 auto;
+}
+
+.homeHeader nav ul li{
+  float: right;
+  display: inline;
+}
+
+.homeHeader: nav a: link, .homeHeader: nav a: visited{
+  color: #e66f6f;
+  display: inline-block;
+  padding: 5px 20 px;
+}
+
+
+
+
+
+
