--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ body{
   }
   
 .body{
+  width: 70%;
+  clear: both;
   margin: 0 auto;
   
   }
@@ -46,7 +48,7 @@ body{
   display: inline;
 }
 
-.homeHeader: nav a: link, .homeHeader: nav a: visited{
+.homeHeader nav a: link, .homeHeader nav a: visited{
   color: #e66f6f;
   display: inline-block;
   padding: 15px 25 px;
