--- a/styles/style.css
+++ b/styles/style.css
@@ -32,6 +32,8 @@ body{
 .homeHeader nav{
   
   background-color: #424242;
+  position: absolute;
+  top: 150px;
   height: 60px;
   border-radius: 130px;
   -moz-border-radius: 30px;
