--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,12 @@ body{
   padding: 15px 25 px;
 }
 
+.homeHeader nav a:hover, .homeHeader nav .active a: visited,
+.homeHeader nav a.active a: link, .homeHeader nav.active a:visited{
+  
+  background-color: #ffffff;
+  text-shadow: none;
+}
 
 
 
