--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,7 @@ body{
   position: absolute;
   top: 150px;
   height: 60px;
+  width: 100%;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
