--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,8 @@ body{
 .homeHeader nav{
   
   background-color: #424242;
-  position: absolute;
-  top: 150px;
+  position: relative;
+  top: 130px;
   height: 60px;
   width: 70%;
   border-radius: 5px;
