--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body{
 .homeHeader nav{
   
   background-color: #424242;
-  position: relative;
+  position: absolute;
   top: 170px;
   height: 60px;
   width: 70%;
@@ -77,7 +77,7 @@ body{
 .homeContent{
   background color: #424242;
   color: #f97575;
-  position: relative;
+  position: absolute;
   top: 140;
 }
 
