--- a/styles/style.css
+++ b/styles/style.css
@@ -74,6 +74,18 @@ body{
   -webkit-border-radius: 5px;
 }
 
+.recentWorks{
+  opacity: 0.5;
+  background-color: #424242;
+  position: absolute;
+  top: 30px;
+  height: 120px;
+  width: 70%;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
 .homeContent{
   background color: #424242;
   color: #f97575;
