--- a/styles/style.css
+++ b/styles/style.css
@@ -74,23 +74,22 @@ body{
   -webkit-border-radius: 5px;
 }
 
-.recentWorks{
+
+
+.main{
+  margin: 0 auto;
+  width: 70%;
+  clear: both;
+
+.homeContent{
   opacity: 0.5;
   background-color: #424242;
   position: absolute;
   top: 30px;
   height: 120px;
-  width: 70%;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-}
-
-.homeContent{
-  background color: #424242;
-  color: #f97575;
-  position: absolute;
-  top: 140;
 }
 
 .homeFooter{
