--- a/styles/style.css
+++ b/styles/style.css
@@ -74,25 +74,25 @@ body{
   -webkit-border-radius: 5px;
 }
 
-.main{
-  line-height = 25px;
+.mainContent{
+  line-height: 25px;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  
+}
+
+.content{
   width: 70%;
   float: left;
+
 }
 
 .homeContent{
-
+  
+  opacity: 0.5;
   background-color: #424242;
-  position: absolute;
-  top: 60px;
-  height: 100px;
-  width: 70%;
-  border-radius: 5px;
+   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
-  padding: 2% 5%;
-  margin-top: 2px;
 }
