--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ body{
 }
 
 .mainContent{
-  line-height: 25px;
+  line-height: 40px;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -84,15 +84,16 @@ body{
 
 .content{
   width: 70%;
-  float: left;
+  float: center;
 
 }
 
 .homeContent{
-  
+  position: absolute;
+  top: 70;
   opacity: 0.5;
   background-color: #424242;
-   border-radius: 5px;
+  border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
 }
