--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,7 @@ body{
   
   opacity: 0.5;
   background-color: #424242;
+  color: #f97575;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
