--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,7 @@ body{
   top: 200;
   width: 60%;
   float: center;
+  padding: 3% 5%;
 
 }
 
@@ -98,4 +99,5 @@ body{
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  margin-bottom: 2%;
 }
