--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ body{
 }
 
 .content{
-  width: 60%;
+  width: 70%;
   float: center;
   padding: 3% 5%;
 
@@ -111,7 +111,7 @@ body{
   margin-bottom: 2%;
 }
 
-.homeFooter p{
+.homeFooter p & p1{
   color: #f97575;
   width: 92%;
 
