--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,8 @@ body{
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
+  position: absolute;
+  top: 130px;
 }
 
 .homeHeader nav ul{
